# rust-cooking-addon

./: Cargo.toml  manifest.json
src/: main.rs
